# geoventure

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: continuous-integration.yml
backend/: .dockerignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/config/: firebase.ts
backend/src/: index.ts
backend/src/controllers/: gamesController.ts  userController.ts
backend/src/routes/: games.ts  index.ts  users.ts
backend/src/services/: streetviewService.ts
backend/src/types/: index.ts
backend/src/utils/: customIds.ts
backend/src/utils/location/: generatedRandomLocation.ts
backend/tests/: index.test.ts
backend/tests/controllers/: firebaseMock.ts  gamesControllers.test.ts  userControllers.test.ts
backend/tests/mocks/: firebaseMock.ts
backend/tests/routes/: users.test.ts
backend/tests/utils/: customIds.test.ts
docs/: api-endpoints.yaml  databes-diagram.md
fastApi/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
fastApi/api/: __init__.py  games.py  users.py
fastApi/database/: firestore.py
fastApi/models/: game.py  user.py
frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json
frontend/src/: App.tsx
